--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -17,9 +17,13 @@ html {
 body {
   color: #545149;
   background-color: #f4f1ec;
+  font-family: Source Sans Pro;
   font-size: 24px;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+ .logo {
+  font-family: 'Bungee';
+ }
