Add the avatar and the user name in the header. As well as style it. Add the input text to send post request to the server

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -6,7 +6,10 @@
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
@@ -24,6 +27,10 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
- .logo {
-  font-family: 'Bungee';
- }
+main {
+  width: 90%;
+  margin: 0 auto;
+  align-items: center;
+  background-color: #f4f1ec;
+  font-size: 16;
+}
