Add character counter to count if the tweet statement has surpassed the 140 character limit. The count then turns red to indicate that the limit was reached

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -14,3 +14,11 @@ header {
 header h2 {
   margin-top: -5px;
 }
+
+#double-arrow {
+  display: flex;
+  flex-direction: column;
+  color: brown;
+  align-items: center;
+  padding-top: 5px;
+}
