--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,10 +1,10 @@
 form {
   padding-top: 20px;
   margin: 0 auto;
-  display: flex;
+  /* display: flex;
   align-items: center;
   justify-content: space-between;
-  flex-direction: row;
+  flex-direction: row; */
 }
 
 button {
@@ -19,4 +19,25 @@ output {
 
 label {
   font-size: 30px;
+}
+
+#tweet-text {
+  resize: none;
+  width: 100%;
+  border-bottom: 5px solid black;
+  border-left: 0;
+  border-right: 0;
+  border-top: 0;
+  background-color: transparent;
+  font-size: 24px;
+  outline: none;
+}
+
+.tweet-character {
+  display: flex;
+  justify-content: space-between;
+}
+
+.red-text {
+  color: red;
 }
