--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,4 +1,4 @@
-header {
+.header {
   /* 140, 196, 246 */
   height: 457px;
   padding-top: 120px;
@@ -22,3 +22,4 @@ header h2 {
   align-items: center;
   padding-top: 5px;
 }
+
