Implement JQuery call to replace the alert call to show error message when character limit is exceeded

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -91,3 +91,15 @@ article.tweet footer {
   display: flex;
   align-items: center;
 }
+
+.error {
+  background: #c10c0cf5;
+  border-radius: 10px;
+  color: white;
+  padding: 20px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  box-shadow: 5px 5px 5px #aaaaaa;
+  margin-bottom: 20px;
+}
