--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -27,6 +27,10 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+ * {
+  box-sizing: border-box;
+}
+
 main {
   width: 90%;
   margin: 0 auto;
