--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -27,14 +27,29 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
- * {
-  box-sizing: border-box;
-}
-
 main {
   width: 90%;
   margin: 0 auto;
   align-items: center;
   background-color: #f4f1ec;
   font-size: 16;
+}
+
+/* desktop screen */
+@media only screen and (min-width: 1024px) {
+  .body-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 90%;
+    margin: 0 auto;
+    padding-top: 10em;
+  }
+  .header {
+    width: 80%;
+  }
+/* 
+  .container {
+    margin: 90px;
+  } */
 }
