--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -7,7 +7,7 @@ nav {
   position: fixed;
   padding-left: 1.5em;
   padding-right: 1.5em;
-  width: 100vw;
+  width: 100%;
   font-family: Source Sans Pro;
   height: 120px;
   color: #FFFFFF;
