--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -13,7 +13,7 @@
 
 form {
   padding-top: 20px;
-  margin: 0 auto;
+  margin-right: 10px;
 }
 
 button {
@@ -32,6 +32,7 @@ label {
 }
 
 #tweet-text {
+  margin-right: 10px;
   resize: none;
   outline: none;
   width: 100%;
