Add a different colour for the desktop screen as well as for the smaller screen to show the difference

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -11,7 +11,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgb(140, 196, 246);
+  background-color: #aecaca;
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
 }
 
@@ -27,25 +27,6 @@ header h2 {
   padding-top: 5px;
 }
 
-/* tablet screen */
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .header {
-    height: 457px;
-    padding-top: 120px;
-    width: 100%;
-    margin-right: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(140, 196, 246);
-  }
-
-  header h2 {
-    margin-top: -5px;
-  }
-}
-
 /* desktop screen */
 @media only screen and (min-width: 1024px) {
   .header {
@@ -54,5 +35,6 @@ header h2 {
     padding-top: 20px;
     width: 50%;
     height: 50%;
+    background-color: rgb(177, 208, 188);
   }
 }
