--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -109,6 +109,10 @@ article.tweet footer {
   margin-bottom: 20px;
 }
 
+#new-tweet-form{
+  padding-top: 0px;
+}
+
 @media only screen and (min-width: 1024px){
   button {
     color: #FFFFFF;
