--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -109,12 +109,24 @@ article.tweet footer {
   margin-bottom: 20px;
 }
 
+#empty-error {
+  background: #c10c0cf5;
+  border-radius: 10px;
+  color: white;
+  padding: 20px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  box-shadow: 5px 5px 5px #aaaaaa;
+  margin-bottom: 20px;
+}
 
 @media only screen and (min-width: 1024px) {
   button {
     color: #FFFFFF;
     background-color: #065241;
   }
+
   #new-tweet-form {
     padding-top: 0px;
   }
